src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Click Refi</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The appointment this case relates to</description>
        <label>Appointment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Appointment__c.Opportunity__r.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Appointment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Life_Date_Time__c</fullName>
        <label>Click Life Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__AdWords_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Campaign</label>
        <referenceTo>bizible__AdWords_Campaign__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Ad_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Group</label>
        <referenceTo>bizible__Ad_Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__City__c</fullName>
        <label>Bizible City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Country__c</fullName>
        <label>Bizible Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Device__c</fullName>
        <label>Bizible Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Keyword</label>
        <referenceTo>bizible__Keyword__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__LandingPage__c</fullName>
        <description>Bizible Landing Page</description>
        <label>Bizible Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Medium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Medium</label>
        <referenceTo>bizible__Medium__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__ReferrerPage__c</fullName>
        <description>Bizible Referrer Page</description>
        <label>Bizible Referrer Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Region__c</fullName>
        <label>Bizible Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Search_Phrase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Search Phrase</label>
        <referenceTo>bizible__Search_Phrase__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Text_Ad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Content</label>
        <referenceTo>bizible__Text_Ad__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__WebSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible WebSource</label>
        <referenceTo>bizible__WebSource__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllEmailReplies</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>Re: **No Reply** Australian Credit and Finance - Appointment Confirmation</value>
        </filters>
        <label>All Email Replies</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>ClickRefiAssignment_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Click LoansRefiAssignment</label>
        <queue>ClickRefiAssignment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commission_Enquiries</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.ACCOUNT</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.COMPANY</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,Escalated,New</value>
        </filters>
        <label>Commission Enquiries</label>
        <queue>Commission_Enquiries</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <role>Executive_Team</role>
            <role>Partner_Broker_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_and_SMS_Queue</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Email and SMS Queue</label>
        <queue>Apptoto_SMS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Presales_Action_Req_Appts_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Presales Action Req - Appts</label>
        <queue>Presales_Action_Req_Appts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ScenarioHelp_Case</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>ScenarioHelp</label>
        <queue>ScenarioHelp</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>appointment_cancellations</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Appointment Cancellations</label>
        <queue>Appointment_Cancellations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>General_Case</fullName>
        <active>true</active>
        <businessProcess>Click Refi</businessProcess>
        <label>General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Help</fullName>
        <active>true</active>
        <businessProcess>Click Refi</businessProcess>
        <label>Scenario Help</label>
    </recordTypes>
    <recordTypes>
        <fullName>acfClick_Refi</fullName>
        <active>true</active>
        <businessProcess>Click Refi</businessProcess>
        <label>Click Refi</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>